--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       <div class="row">
         <div class="col-lg-6 pt-5 pt-lg-0 order-2 order-lg-1 d-flex flex-column justify-content-center">
           <h1 data-aos="fade-up">Arewa Rescue and Rehablitation of Vulnerable Children in Nigeria.</h1>
-          <h2 data-aos="fade-up" data-aos-delay="400">Our NGO aims to help integrate vulnerable children into formal and non-formal education.</h2>
+          <h2 data-aos="fade-up" data-aos-delay="400">Our Organization aims to help integrate vulnerable children into formal and non-formal education.</h2>
           <div data-aos="fade-up" data-aos-delay="800">
             <a href="#about" class="btn-get-started scrollto">Get Started</a>
           </div>
